fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!--
 	Copyright notice
 -->
-Afeter Setup master for rebase conflict.
+Before Setup for rebase conflict.
 <!DOCTYPE html>
 <head>
-	<title>Afeter Setup master for rebase conflict</title>
+	<title>After Setup bigtrouble for rebase conflict</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
