--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!--
 	Copyright notice
 -->
-Before Setup for rebase conflict.
+Afeter Setup master for rebase conflict.
 <!DOCTYPE html>
 <head>
-	<title>A Great website</title>
+	<title>Afeter Setup master for rebase conflict</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,8 +18,7 @@ Before Setup for rebase conflict.
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			I'm not sure what will go here, but I'm sure
-			it will be nice.
+			Afeter Setup master for rebase conflict
 		</p>
 	</main>
 	<footer class="container">
