after solve rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 	Copyright notice
 -->
 Before Setup for rebase conflict.
+After solve rebase conflict.
 <!DOCTYPE html>
 <head>
 	<title>After Setup bigtrouble for rebase conflict</title>
