change simple.html for stashing operation

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ Before Setup for rebase conflict.
 After solve rebase conflict.
 <!DOCTYPE html>
 <head>
-	<title>After Setup bigtrouble for rebase conflict</title>
+	<title>change for stashing operation.</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
