Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>change for stashing operation.</title>
+	<title>tagging 2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
